Mon Sep 22 23:18:36 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl:
        * ace/OS_NS_time.inl:
          Fixed WinCE link error

        * ace/OS_NS_unistd.cpp:
          Initialise variable with 0

        * ace/config-vxworks6.4.h:
          Extended the check for lacking log2

Mon Sep 22 14:54:36 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/ETCL/ETCL_Constraint.cpp:

          Fix fuzz errors.

Mon Sep 22 13:17:19 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2980_Regression_Test.cpp:

          Make this test portable for MacOS and HP-UX.

Mon Sep 22 11:25:53 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Use variable CURDIR instead of PWD where possible to identify the
          current working directory. Fixes bug #3393.

Sat Sep 20 13:13:29 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove ACE_HAS_SYSV_SYSINFO autoheader template.  This is now
          handled within the ACE_CHECK_FUNC_SYSINFO macro.

        * configure.ac:

          Remove checks for ACE_HAS_SYS_SYSINFO_H, ACE_HAS_SYSTEMINFO_H,
          and ACE_HAS_SYSV_SYSINFO, and replace them with a single call
          to the new ACE_CHECK_FUNC_SYSINFO macro, which handles all the
          details.  Fixes bugzilla issue #3325.

        * m4/ace_func.m4:

          New autoconf macro ACE_CHECK_FUNC_SYSINFO, which sets the
          ACE_HAS_SYS_SYSINFO_H, ACE_HAS_SYS_SYSTEMINFO_H,
          ACE_HAS_SYSV_SYSINFO, and/or ACE_HAS_LINUX_SYSINFO feature
          test macros as appropriate for the system.

Sat Sep 20 12:23:10 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_unistd.inl:
        * ace/README:
        * ace/config-irix6.x-common.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
        * ace/config-tandem.h: