@@ -1,3 +1,10 @@
+Tue Sep 23 11:25:58 UTC 2008  Simon McQueen  <sm@prismtech.com>
+
+        * ace/Assert.h:
+
+          Add new macro: ACE_TEST_ASSERT. Behaves just like ACE_ASSERT but it
+          doesn't boil away to nothing on non debug platforms.
+
 Mon Sep 22 23:18:36 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_unistd.inl:
